--- a/.github/workflows/[Reusable]-Branch_naming_check_main.yml
+++ b/.github/workflows/[Reusable]-Branch_naming_check_main.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
         
 jobs:
-  branch-name-validation:
+  branch-name-validation-main:
     runs-on: ubuntu-latest
     steps:
       - name: check-branch-names-main
